navbar fixed with lumavi logo and burger menu aligned to left with transparency on the whole bar. I will try to implement the sticky topbar from foundation: http://foundation.zurb.com/sites/docs/v/5.5.3/components/topbar.html

--- a/css/app.css
+++ b/css/app.css
@@ -2,24 +2,29 @@
     background: #323232;
 }
 
-#lumavi-logo{
+#navbar{
     position: fixed;
-    width: 14.25em;
     top: 0;
     left: 0;
+    z-index: 100;
+    width: 100%;
+    height: 7%; height: 7vh;
+    background: rgba(53,53,53,0.8);
+}
+
+#lumavi-logo{
+    height: 7%; height: 7vh;
+    float: left;
     -webkit-backface-visibility: hidden;
             backface-visibility: hidden;
-    z-index: 100;
+    width: 7vh;
 }
 
 nav {
-    position: fixed;
-    width: 6.25em;
-    top: 0;
-    right: 0;
+    width: 6em;
+    float: left;
     -webkit-backface-visibility: hidden;
             backface-visibility: hidden;
-    z-index: 100;
 }
 
 nav a {
@@ -38,7 +43,7 @@ nav ul {
     z-index: 2;
     height: 7%; height: 7vh;
     cursor: pointer;
-    background: #353535;
+    /*background: #353535;*/
     display: -webkit-box;
     display: -webkit-flex;
     display: -ms-flexbox;
@@ -103,7 +108,8 @@ nav ul {
 }
 
 .nav-list {
-    background: #353535;
+    /*background: #353535;*/
+    background: rgba(53,53,53,0.8);
     color: #fff;
     height: 30%; height: 30vh;
     display: -webkit-box;
@@ -114,8 +120,8 @@ nav ul {
         -ms-flex-flow: column wrap;
             flex-flow: column wrap;
     
-    -webkit-transform: translateY(-100%);
-            transform: translateY(-100%);
+    -webkit-transform: translateY(-125%);
+            transform: translateY(-125%);
     -webkit-transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
             transition: all 0.5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
 }
